--- a/doc/man3/SSL_CIPHER_get_name.pod
+++ b/doc/man3/SSL_CIPHER_get_name.pod
@@ -8,6 +8,7 @@ OPENSSL_cipher_name,
 SSL_CIPHER_get_bits,
 SSL_CIPHER_get_version,
 SSL_CIPHER_description,
+SSL_CIPHER_flags_description,
 SSL_CIPHER_get_cipher_nid,
 SSL_CIPHER_get_digest_nid,
 SSL_CIPHER_get_handshake_digest,
@@ -16,7 +17,9 @@ SSL_CIPHER_get_auth_nid,
 SSL_CIPHER_is_aead,
 SSL_CIPHER_find,
 SSL_CIPHER_get_id,
-SSL_CIPHER_get_protocol_id
+SSL_CIPHER_get_protocol_id,
+SSL_CTX_count_ciphers_by_version,
+SSL_count_ciphers_by_version
 - get SSL_CIPHER properties
 
 =head1 SYNOPSIS
@@ -29,6 +32,7 @@ SSL_CIPHER_get_protocol_id
  int SSL_CIPHER_get_bits(const SSL_CIPHER *cipher, int *alg_bits);
  char *SSL_CIPHER_get_version(const SSL_CIPHER *cipher);
  char *SSL_CIPHER_description(const SSL_CIPHER *cipher, char *buf, int size);
+ char *SSL_CIPHER_flags_description(const SSL *s, int i, char *buf, int size);
  int SSL_CIPHER_get_cipher_nid(const SSL_CIPHER *c);
  int SSL_CIPHER_get_digest_nid(const SSL_CIPHER *c);
  const EVP_MD *SSL_CIPHER_get_handshake_digest(const SSL_CIPHER *c);
@@ -38,6 +42,8 @@ SSL_CIPHER_get_protocol_id
  const SSL_CIPHER *SSL_CIPHER_find(SSL *ssl, const unsigned char *ptr);
  uint32_t SSL_CIPHER_get_id(const SSL_CIPHER *c);
  uint32_t SSL_CIPHER_get_protocol_id(const SSL_CIPHER *c);
+ int SSL_CTX_count_ciphers_by_version(const SSL_CTX *ctx, int version);
+ int SSL_count_ciphers_by_version(const SSL *ssl, int version);
 
 =head1 DESCRIPTION
 
@@ -150,8 +156,24 @@ Message digest, such as B<SHA256>.
 
 Some examples for the output of SSL_CIPHER_description():
 
- ECDHE-RSA-AES256-GCM-SHA256 TLSv1.2 Kx=ECDH     Au=RSA  Enc=AESGCM(256) Mac=AEAD
- RSA-PSK-AES256-CBC-SHA384 TLSv1.0 Kx=RSAPSK   Au=RSA  Enc=AES(256)  Mac=SHA384
+ ECDHE-RSA-AES256-GCM-SHA384    TLSv1.2 Kx=ECDH     Au=RSA   Enc=AESGCM(256) Mac=AEAD
+ RSA-PSK-AES256-CBC-SHA384      TLSv1   Kx=RSAPSK   Au=RSA   Enc=AES(256)  Mac=SHA384
+
+SSL_CIPHER_flags_description() returns a textual/graphical description of flags
+of the B<i>-th cipher from SSL B<s> into the buffer B<buf> of length B<len>
+provided. If B<buf> is provided, it must be at least 8 bytes, otherwise a buffer
+will be allocated using OPENSSL_malloc().  If the provided buffer is too small,
+or the allocation fails, B<NULL> is returned. Buffer B<buf> can contain unicode
+characters. Index B<i> must be greater than or equal to zero and can not exceed
+the number of ciphersuites in SSL.
+
+SSL_CTX_count_ciphers_by_version() returns the number of ciphersuites from
+B<SSL_CTX> matching B<version> and being specified using ciphersuites
+interface (e.g.: SSL_CTX_set_ciphersuites)
+
+SSL_count_ciphers_by_version() returns the number of ciphersuites from B<SSL>
+matching B<version> and being specified using ciphersuites interface
+(e.g.: SSL_set_ciphersuites)
 
 =head1 RETURN VALUES
 
@@ -159,6 +181,9 @@ SSL_CIPHER_get_name(), SSL_CIPHER_standard_name(), OPENSSL_cipher_name(),
 SSL_CIPHER_get_version() and SSL_CIPHER_description() return the corresponding
 value in a null-terminated string for a specific cipher or "(NONE)"
 if the cipher is not found.
+
+SSL_CIPHER_flags_description() returns the corresponding value in a
+null-terminated string for a specific index.
 
 SSL_CIPHER_get_bits() returns a positive integer representing the number of
 secret bits or 0 if an error occurred.
@@ -179,6 +204,9 @@ SSL_CIPHER_get_id() returns a 4-byte integer representing the OpenSSL-specific I
 
 SSL_CIPHER_get_protocol_id() returns a 2-byte integer representing the TLS
 protocol-specific ID.
+
+SSL_CTX_count_ciphers_by_version() and SSL_count_ciphers_by_version() return
+number of ciphers matching specified version.
 
 =head1 SEE ALSO
 
