--- a/doc/man3/SSL_CTX_set_cipher_list.pod
+++ b/doc/man3/SSL_CTX_set_cipher_list.pod
@@ -4,10 +4,13 @@
 
 SSL_CTX_set_cipher_list,
 SSL_set_cipher_list,
+SSL_CTX_set_cipher_list_and_mask,
+SSL_set_cipher_list_and_mask,
 SSL_CTX_set_ciphersuites,
 SSL_set_ciphersuites,
 OSSL_default_cipher_list,
-OSSL_default_ciphersuites
+OSSL_default_ciphersuites,
+OPENSSL_version_list
 - choose list of available SSL_CIPHERs
 
 =head1 SYNOPSIS
@@ -17,26 +20,38 @@ OSSL_default_ciphersuites
  int SSL_CTX_set_cipher_list(SSL_CTX *ctx, const char *str);
  int SSL_set_cipher_list(SSL *ssl, const char *str);
 
+ int SSL_CTX_set_cipher_list_and_mask(SSL_CTX *ctx, const char *str, int version_mask);
+ int SSL_set_cipher_list_and_mask(SSL *ssl, const char *str, int version_mask);
+
  int SSL_CTX_set_ciphersuites(SSL_CTX *ctx, const char *str);
  int SSL_set_ciphersuites(SSL *s, const char *str);
 
  const char *OSSL_default_cipher_list(void);
  const char *OSSL_default_ciphersuites(void);
 
+ int OPENSSL_version_list(const char *str, int *version_mask)
+
 =head1 DESCRIPTION
 
-SSL_CTX_set_cipher_list() sets the list of available ciphers (TLSv1.2 and below)
-for B<ctx> using the control string B<str>. The format of the string is described
-in L<openssl-ciphers(1)>. The list of ciphers is inherited by all
-B<ssl> objects created from B<ctx>. This function does not impact TLSv1.3
-ciphersuites. Use SSL_CTX_set_ciphersuites() to configure those.
+SSL_CTX_set_cipher_list_and_mask() sets the list of available ciphers
+for B<ctx> using the control string B<str> and B<version_mask>. The format of
+these strings is described in L<openssl-ciphers(1)>. The list of ciphers is
+inherited by all B<ssl> objects created from B<ctx>. If you want to set only
+TLSv1.3 ciphersuites. Use SSL_CTX_set_ciphersuites() to configure those.
 
-SSL_set_cipher_list() sets the list of ciphers (TLSv1.2 and below) only for
-B<ssl>.
+SSL_CTX_set_cipher_list() works just like SSL_CTX_set_cipher_list_and_mask(),
+but sets the version_mask to the default value.
+
+SSL_set_cipher_list_and_mask() and SSL_set_cipher_list() set the
+list of ciphers only for B<ssl>.
+
+OPENSSL_version_list() is used to convert SSL/TLS version string from B<str>
+into B<version_mask>. This is a simple colon vertical bar ("|") separated list of
+version names. The format of this string is described in L<openssl-ciphers(1)>.
 
 SSL_CTX_set_ciphersuites() is used to configure the available TLSv1.3
 ciphersuites for B<ctx>. This is a simple colon (":") separated list of TLSv1.3
-ciphersuite names in order of preference. Valid TLSv1.3 ciphersuite names are:
+ciphersuite names in the order of preference. Valid TLSv1.3 ciphersuite names are:
 
 =over 4
 
@@ -65,8 +80,9 @@ cipher string for TLSv1.3 ciphersuites.
 
 =head1 NOTES
 
-The control string B<str> for SSL_CTX_set_cipher_list() and
-SSL_set_cipher_list() should be universally usable and not depend
+The control string B<str> for SSL_CTX_set_cipher_list(),
+SSL_CTX_set_cipher_list_and_mask(), SSL_set_cipher_list() and
+SSL_set_cipher_list_and_mask() should be universally usable and not depend
 on details of the library configuration (ciphers compiled in). Thus no
 syntax checking takes place. Items that are not recognized, because the
 corresponding ciphers are not compiled in or because they are mistyped,
@@ -81,7 +97,7 @@ ADH ciphers don't need a certificate, but DH-parameters must have been set.
 All other ciphers need a corresponding certificate and key.
 
 A RSA cipher can only be chosen, when a RSA certificate is available.
-RSA ciphers using DHE need a certificate and key and additional DH-parameters
+RSA ciphers using DHE need a certificate, a key and an additional DH-parameters
 (see L<SSL_CTX_set_tmp_dh_callback(3)>).
 
 A DSA cipher can only be chosen, when a DSA certificate is available.
@@ -100,11 +116,15 @@ cipher list defines are deprecated as of 3.0.
 
 =head1 RETURN VALUES
 
-SSL_CTX_set_cipher_list() and SSL_set_cipher_list() return 1 if any cipher
-could be selected and 0 on complete failure.
+SSL_CTX_set_cipher_list(), SSL_set_cipher_list(),
+SSL_CTX_set_cipher_list_and_mask() and SSL_set_cipher_list_and_mask()
+return 1 if any cipher could be selected and 0 on complete failure.
 
 SSL_CTX_set_ciphersuites() and SSL_set_ciphersuites() return 1 if the requested
 ciphersuite list was configured, and 0 otherwise.
+
+OPENSSL_version_list() returns number of characters that were suscessfully
+procesed and 0 when no versin name was recognized.
 
 =head1 SEE ALSO
 
