--- a/doc/man3/SSL_extension_supported.pod
+++ b/doc/man3/SSL_extension_supported.pod
@@ -3,6 +3,9 @@
 =head1 NAME
 
 SSL_extension_supported,
+SSL_custom_ext_add_cb_ex,
+SSL_custom_ext_free_cb_ex,
+SSL_custom_ext_parse_cb_ex,
 SSL_CTX_add_custom_ext,
 SSL_CTX_add_client_custom_ext, SSL_CTX_add_server_custom_ext,
 custom_ext_add_cb, custom_ext_free_cb, custom_ext_parse_cb
