fixup! Provide better documentation for SSL_get_servername()

--- a/doc/man3/SSL_CTX_set_tlsext_servername_callback.pod
+++ b/doc/man3/SSL_CTX_set_tlsext_servername_callback.pod
@@ -157,14 +157,15 @@ corner cases. This has been fixed from OpenSSL 1.1.1e.
 
 Prior to 1.1.1e, when the client requested a servername in an initial TLSv1.2
 handshake, the server accepted it, and then the client successfully resumed but
-set a different explict servername in the second handshake it returned the
-servername from the second handshake. This has now been changed to the
-servername from the original handshake.
+set a different explict servername in the second handshake then when called by
+the client it returned the servername from the second handshake. This has now
+been changed to the servername requested in the original handshake.
 
 Also prior to 1.1.1e, if the client sent a servername in the first handshake but
 the server did not accept it, and then a second handshake occured where TLSv1.2
-resumption was successful then it returned the servername from the original
-handshake. This has now been changed to NULL.
+resumption was successful then when called by the server it returned the
+servername requested in the original handshake. This has now been changed to
+NULL.
 
 =head1 COPYRIGHT
 
