--- a/doc/man3/SSL_CIPHER_get_name.pod
+++ b/doc/man3/SSL_CIPHER_get_name.pod
@@ -32,7 +32,7 @@ SSL_count_ciphers_by_version
  int SSL_CIPHER_get_bits(const SSL_CIPHER *cipher, int *alg_bits);
  char *SSL_CIPHER_get_version(const SSL_CIPHER *cipher);
  char *SSL_CIPHER_description(const SSL_CIPHER *cipher, char *buf, int size);
- char *SSL_CIPHER_flags_description(const SSL *s, int i, char *buf, int size);
+ char *SSL_CIPHER_flags_description(const uint8_t *flags, int i, char *buf, int size);
  int SSL_CIPHER_get_cipher_nid(const SSL_CIPHER *c);
  int SSL_CIPHER_get_digest_nid(const SSL_CIPHER *c);
  const EVP_MD *SSL_CIPHER_get_handshake_digest(const SSL_CIPHER *c);
@@ -160,7 +160,7 @@ Some examples for the output of SSL_CIPHER_description():
  RSA-PSK-AES256-CBC-SHA384      TLSv1   Kx=RSAPSK   Au=RSA   Enc=AES(256)  Mac=SHA384
 
 SSL_CIPHER_flags_description() returns a textual/graphical description of flags
-of the B<i>-th cipher from SSL B<s> into the buffer B<buf> of length B<len>
+of the B<i>-th flag from array B<flags> into the buffer B<buf> of length B<len>
 provided. If B<buf> is provided, it must be at least 8 bytes, otherwise a buffer
 will be allocated using OPENSSL_malloc().  If the provided buffer is too small,
 or the allocation fails, B<NULL> is returned. Buffer B<buf> can contain unicode
