--- a/doc/man3/MD5.pod
+++ b/doc/man3/MD5.pod
@@ -22,6 +22,10 @@ L<openssl_user_macros(7)>:
 
  #include <openssl/md4.h>
 
+Deprecated since OpenSSL 3.0, can be hidden entirely by defining
+B<OPENSSL_API_COMPAT> with a suitable version value, see
+L<openssl_user_macros(7)>:
+
  unsigned char *MD4(const unsigned char *d, unsigned long n, unsigned char *md);
 
  int MD4_Init(MD4_CTX *c);
