--- a/doc/man3/EVP_DigestVerifyInit.pod
+++ b/doc/man3/EVP_DigestVerifyInit.pod
@@ -117,14 +117,16 @@ in B<sig> of length B<siglen>.
 
 =head1 RETURN VALUES
 
-EVP_DigestVerifyInit() and EVP_DigestVerifyUpdate() return 1 for success and 0
-for failure.
+EVP_DigestVerifyInit(), EVP_DigestVerifyUpdate(), EVP_DigestVerifyaFinal() and
+EVP_DigestVerify() return 1 for success and 0 or a negative value for failure.
+In particular, a return value of -2 indicates the operation is not supported by
+the public key algorithm.
 
-EVP_DigestVerifyFinal() and EVP_DigestVerify() return 1 for success; any other
-value indicates failure.  A return value of zero indicates that the signature
-did not verify successfully (that is, B<tbs> did not match the original data or
-the signature had an invalid form), while other values indicate a more serious
-error (and sometimes also indicate an invalid signature form).
+A return value of zero from EVP_DigestVerifyFinal() and EVP_DigestVerify()
+indicates that the signature did not verify successfully (that is, B<tbs> did
+not match the original data or the signature had an invalid form), while
+negative values indicate a more serious error (and sometimes also indicate an
+invalid signature form).
 
 The error codes can be obtained from L<ERR_get_error(3)>.
 
