fixup! Fix documentation for EVP_DigestSign* and EVP_DigestVerify*

--- a/doc/man3/EVP_DigestVerifyInit.pod
+++ b/doc/man3/EVP_DigestVerifyInit.pod
@@ -117,7 +117,7 @@ in B<sig> of length B<siglen>.
 
 =head1 RETURN VALUES
 
-EVP_DigestVerifyInit(), EVP_DigestVerifyUpdate(), EVP_DigestVerifyaFinal() and
+EVP_DigestVerifyInit(), EVP_DigestVerifyUpdate(), EVP_DigestVerifyFinal() and
 EVP_DigestVerify() return 1 for success and 0 or a negative value for failure.
 In particular, a return value of -2 indicates the operation is not supported by
 the public key algorithm.
